samples/_failures_safe/1761530978_9b0fe8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4c4e4d7c.c: In function ‘reset_machine’:
./samples/SAFE/__tmp_4c4e4d7c.c:170:5: error: expected expression at end of input
  170 |     if (
      |     ^~
./samples/SAFE/__tmp_4c4e4d7c.c:170:5: error: expected declaration or statement at end of input
